objects/OUV_Gatehouse_Log__c.object
<CustomObject>
    <label>OUV Gatehouse Log</label>
    <nameField>
        <displayFormat>L-{00000000}</displayFormat>
        <label>OUV Gatehouse Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OUV Gatehouse Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Driver__c</fullName>
        <inlineHelpText>Please enter the cdsid of the returning driver, otherwise enter their name.</inlineHelpText>
        <label>Driver / Logistics</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>In the UK only Business Protection can create/modify these records. In other markets the Fleet team will manage this. Hence it is NOT MDR.</description>
        <label>OUV Vehicle</label>
        <referenceTo>OUV_Vehicle__c</referenceTo>
        <relationshipLabel>OUV Gatehouse Logs</relationshipLabel>
        <relationshipName>OUV_Gatehouse_Logs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Log_Date__c</fullName>
        <label>Log Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OUV_Action_Type__c</fullName>
        <label>Action Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check-out</fullName>
                </value>
                <value>
                    <fullName>Check-in</fullName>
                </value>
                <value>
                    <fullName>Check-in &amp; Close</fullName>
                </value>
                <value>
                    <fullName>Check-in &amp; Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Reservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservation</label>
        <referenceTo>B25__Reservation__c</referenceTo>
        <relationshipLabel>OUV Gatehouse Logs</relationshipLabel>
        <relationshipName>OUV_Gatehouse_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Fleet_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Gatehouse_Logs_Manger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Log_Date_Local__c</fullName>
        <label>Log Date (Local)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Log_Time_Local__c</fullName>
        <label>Log Time (Local)</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>OUV_Return_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select from existing locations, or create a new account / location for frequently used locations</inlineHelpText>
        <label>Return Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OUV Gatehouse Logs</relationshipLabel>
        <relationshipName>OUV_Gatehouse_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Condition__c</fullName>
        <label>Vehicle Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Fleet_Administrator_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Gatehouse_Logs_Admin1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Fleet_Administrator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Gatehouse_Logs_Admin2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Fleet_Administrator_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Gatehouse_Logs_Admin3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_No_Of_Keys_Checked_In__c</fullName>
        <label>No. Of Keys Checked In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Transport_Prep_Reservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transport/Prep Reservation</label>
        <referenceTo>B25__Reservation__c</referenceTo>
        <relationshipLabel>OUV Gatehouse Logs (Transport/Prep Reservation)</relationshipLabel>
        <relationshipName>OUV_Gatehouse_Logs_Transport</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Mileage_At_Close_Of_Booking__c</fullName>
        <label>Mileage At Close Of Booking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>OUV_Check_in</fullName>
        <active>true</active>
        <label>Check-in</label>
    </recordTypes>
    <recordTypes>
        <fullName>OUV_Check_out</fullName>
        <active>true</active>
        <label>Check-out</label>
    </recordTypes>
    <validationRules>
        <fullName>Mileage_Greater_than_Previous_Value</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(OUV_Mileage_At_Close_Of_Booking__c)) &amp;&amp; OUV_Mileage_At_Close_Of_Booking__c &lt;  OUV_Vehicle__r.OUV_VehicleMileage__c</errorConditionFormula>
        <errorDisplayField>OUV_Mileage_At_Close_Of_Booking__c</errorDisplayField>
        <errorMessage>You must provide a mileage higher or equal to the previously recorded mileage.</errorMessage>
    </validationRules>
</CustomObject>